# West-Flemish-HPT

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml
src/model/: base_.py
src/wfgpt/: main.py
src/wfgpt/data/: dataloader.py  prepare_data.py
src/wfgpt/data/datafolders/: Sentences_20211102.csv  WVLspreuken.csv  westflemishinput.txt
src/wfgpt/data/datafolders/encodings/: attention_mask.npy  input_ids.npy
src/wfgpt/model/: __init.__.py  base.py  config.py  hpt.py  sampler.py  trainer.py
tests/: __init__.py
