[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wfgpt"
dynamic = ["version"]
description = 'A West-Flemish GPT model.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "alexander stevens", email = "alexanderstevens97@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jaxtyping",
  "pytorch_lightning",
  "beartype",
  "pandas",
  "numpy",
  "torch",
]

[project.urls]
Documentation = "https://github.com/alexander stevens/wfgpt#readme"
Issues = "https://github.com/alexander stevens/wfgpt/issues"
Source = "https://github.com/alexander stevens/wfgpt"

[tool.hatch.version]
path = "src/wfgpt/__about__.py"

[tool.coverage.run]
source_pkgs = ["wfgpt", "tests"]
branch = true
parallel = true
omit = [
  "src/wfgpt/__about__.py",
]

[tool.coverage.paths]
wfgpt = ["src/wfgpt", "*/wfgpt/src/wfgpt"]
tests = ["tests", "*/wfgpt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]